Allow Transaction injection into procedures.
Allow injection of current ongoing transaction into procedures.
Remove temporary thread local holder of top level transaction.
Remove custom ProcedureTransaction interface.