@@ -19,8 +19,8 @@
  */
 package org.neo4j.tooling.procedure.visitors;
 
-import java.util.Arrays;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -35,13 +35,13 @@ import javax.lang.model.util.Types;
 
 import org.neo4j.common.DependencyResolver;
 import org.neo4j.graphdb.GraphDatabaseService;
+import org.neo4j.graphdb.Transaction;
 import org.neo4j.internal.kernel.api.security.SecurityContext;
 import org.neo4j.kernel.api.KernelTransaction;
 import org.neo4j.kernel.api.security.UserManager;
 import org.neo4j.kernel.internal.GraphDatabaseAPI;
 import org.neo4j.logging.Log;
 import org.neo4j.procedure.Context;
-import org.neo4j.procedure.ProcedureTransaction;
 import org.neo4j.procedure.TerminationGuard;
 import org.neo4j.tooling.procedure.messages.CompilationMessage;
 import org.neo4j.tooling.procedure.messages.ContextFieldError;
@@ -51,12 +51,10 @@ import static org.neo4j.tooling.procedure.CompilerOptions.IGNORE_CONTEXT_WARNING
 
 class ContextFieldVisitor extends SimpleElementVisitor8<Stream<CompilationMessage>,Void>
 {
-    private static final Set<String> SUPPORTED_TYPES = new LinkedHashSet<>(
-            Arrays.asList( GraphDatabaseService.class.getName(), Log.class.getName(), TerminationGuard.class.getName(),
-                    SecurityContext.class.getName(), ProcedureTransaction.class.getName() ) );
-    private static final Set<String> RESTRICTED_TYPES = new LinkedHashSet<>(
-            Arrays.asList( GraphDatabaseAPI.class.getName(), KernelTransaction.class.getName(),
-                    DependencyResolver.class.getName(), UserManager.class.getName(),
+    private static final Set<String> SUPPORTED_TYPES = new LinkedHashSet<>( List.of( GraphDatabaseService.class.getName(),
+            Log.class.getName(), TerminationGuard.class.getName(), SecurityContext.class.getName(), Transaction.class.getName() ) );
+    private static final Set<String> RESTRICTED_TYPES = new LinkedHashSet<>( List.of( GraphDatabaseAPI.class.getName(),
+            KernelTransaction.class.getName(), DependencyResolver.class.getName(), UserManager.class.getName(),
                     // the following classes are not in the compiler classpath
                     "com.neo4j.kernel.enterprise.api.security.EnterpriseAuthManager",
                     "com.neo4j.server.security.enterprise.log.SecurityLog" ) );
